builds/6/log
Started by user unknown or anonymous
Running as SYSTEM
Building in workspace /var/lib/jenkins/workspace/python_bash_job
[python_bash_job] $ python /tmp/jenkins9858219226219038856.py
  File "/tmp/jenkins9858219226219038856.py", line 4
    os.system(`sudo mkdir /home/lenny/{} ; ls /home/lenny`.format(folder_new))
                        ^
SyntaxError: invalid syntax
Build step 'Execute Python script' marked build as failure
Finished: FAILURE
